# ydl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
darknet/: Makefile
darknet/cmake/: CudaComputeTargetFlags.cmake
include/ydl/: detector.hpp
src/: detector.cpp  ydl_test.cpp
